First tests for lock sensetive iterable anylses. Some bugs fixed. Needs more testing! ;)